# competition_flow

./: .gitignore  Makefile  README.md  dvc.yaml  load_dataset.ipynb  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
conf/: build_features.yaml  config.yaml  infer.yaml  split.yaml  train.yaml
conf/data/: flat50m.yaml
conf/model/: als.yaml  bpr.yaml  dssm.yaml  lgbm.yaml  recbole.yaml  sasrec.yaml
conf/model/recbole/: dcnv2.yaml
conf/pipeline/: infer.yaml  train.yaml
conf/split/: time.yaml
ml/: build_features.py  infer.py  make_split.py  prepare_data.py  train.py
ml/build_features/: __init__.py  __main__.py  base.py  inter.py  io.py  items.py  users.py
ml/core/: data.py  evaluator.py  interfaces.py  recsys_metrics.py  utils.py
ml/models/: __init__.py  als.py  bpr.py  dssm.py  dummy.py  lgbm.py  recbole_adapter.py  recbole_base.py  sasrec.py
tests/: test_prepare_dataset.py
